@@ -880,6 +880,9 @@
         name = "Joshua Hudson"
     [/entry]
     [entry]
+	name = "Kamil Kaczmarczyk (lampak)"
+    [/entry]
+    [entry]
         name = "Karl Miller (karlm)"
         email = "karl_dot_miller_dot_km_at_gmail_dot_com"
     [/entry]
