@@ -50,6 +50,7 @@ Version 1.7.5+svn:
    * Add a Description button to the add-ons downloader
    * For move+attack mouse click, now show the attack dialog before the move.
    * In sidebar, add current bonus/malus info from alignement.
+   * New option to enable/disable move interruption when an ally is sighted
  * WML engine:
    * Fix silent=yes for objectives
    * Allow [story] [part] blocks to specify the title box alignment
